<resources>
    <string name="app_name">SimpleMemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="save">Save</string>
    <string name="cancel">cancel</string>

    <string name="item_title">Title</string>
    <string name="item_content">Description</string>
    <string name="item_tags">Tags</string>
    <string name="input_tag_hint">(Input new tag here)</string>
    <string name="input_content_hint">(Write memo here)</string>
</resources>
